Fix range slider transparent border to render on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -261,7 +261,7 @@ input[type='range'].with-gradient::-moz-range-thumb {
   height: 32px;
   flex-grow: 0;
   border-radius: 25px;
-  border: solid 5px rgba(255, 255, 255, 0.08);
+  box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.2);
   background-color: #fff;
   transition: background 0.3s ease-in-out;
 }
@@ -281,7 +281,7 @@ input[type='range'].with-gradient::-webkit-slider-thumb {
   height: 32px;
   flex-grow: 0;
   border-radius: 25px;
-  border: solid 5px rgba(255, 255, 255, 0.08);
+  box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.2);
   background-color: #fff;
   transition: background 0.3s ease-in-out;
 }
